argocd/applications/foundryvtt/rsync.yaml

kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: "foundryvtt"
    service: "foundryvtt-rsync"
  name: "foundryvtt-rsync"
  namespace: "foundryvtt"

spec:
  replicas: 1
  revisionHistoryLimit: 0

  selector:
    matchLabels:
      app: "foundryvtt"
      service: "foundryvtt-rsync"

  template:
    metadata:
      labels:
        app: "foundryvtt"
        service: "foundryvtt-rsync"
      name: "foundryvtt-rsync"
      namespace: "foundryvtt"

    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: "kubernetes.io/hostname"
                  operator: In
                  values:
                    - "thicket1"

      containers:
        - name: "rsync"
          # version 0.2 arm
          image: "ogivuk/rsync@sha256:75c0cf3b120c644bf6e59b4bcbb5dbce8fce4ff4b43f4aaac3b55434acd90e5a"
          imagePullPolicy: "IfNotPresent"

          resources:
            requests:
              cpu: "80m"
              memory: "70Mi"

          volumeMounts:
            - name: "backup"
              mountPath: "/data/destination"

            - name: "crontab"
              mountPath: "/rsync/crontab"
              subPath: "crontab"

            - name: "data"
              mountPath: "/data/source"
              readOnly: true

      imagePullSecrets:
        - name: "dockerhub-tlake-read-only"

      volumes:
        - name: "backup"
          persistentVolumeClaim:
            claimName: "backup"

        - name: "crontab"
          configMap:
            name: "foundryvtt-rsync-crontab"

        - name: "data"
          persistentVolumeClaim:
            claimName: "data"
