argocd/applications/foundryvtt/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: "foundryvtt"
  labels:
    app: "foundryvtt"

spec:
  replicas: 1
  revisionHistoryLimit: 0

  selector:
    matchLabels:
      app: "foundryvtt"

  template:
    metadata:
      labels:
        app: "foundryvtt"

    spec:
      containers:
        - name: "foundryvtt"
          image: "felddy/foundryvtt:11.315"

          ports:
            - name: "foundryvtt"
              containerPort: 30000

          volumeMounts:
            - name: "foundryvtt-container-cache"
              mountPath: "/data/container_cache"

            - name: "foundryvtt-data"
              mountPath: "/data"

      hostname: "foundry_host"

      volumes:
        - name: "foundryvtt-container-cache"
          persistentVolumeClaim:
            claimName: "foundryvtt-container-cache"

        - name: "foundryvtt-data"
          persistentVolumeClaim:
            claimName: "foundryvtt-data"

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: "foundryvtt"
    service: "foundryvtt"
  name: "foundryvtt"
  namespace: "foundryvtt"

spec:
  ports:
    - name: "http-traffic"
      port: 80
      targetPort: "foundryvtt"

  selector:
    app: "foundryvtt"
    service: "foundryvtt"

  type: NodePort

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app: "foundryvtt"
    service: "foundryvtt"
  name: "foundryvtt-web"
  namespace: "foundryvtt"

spec:
  entryPoints:
    - web

  routes:
    - match: Host(`foundry.tlake.io`)
      kind: Rule
      services:
        - name: "foundryvtt"
          port: "http-traffic"

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app: "foundryvtt"
    service: "foundryvtt"
  name: "foundryvtt-websecure"
  namespace: "foundryvtt"

spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`foundry.tlake.io`)
      kind: Rule
      services:
        - name: "foundryvtt"
          port: "http-traffic"

  tls:
    certResolver: "production"
